[package]
name = "rustLiveActivity"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "mysql", "macros", "bigdecimal", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.11", features = ["json", "rustls-tls"] }
dotenv = "0.15"
thiserror = "2.0.9"
chrono = { version = "0.4", features = ["serde"] }
bigdecimal = { version = "0.4.7", features = ["serde"] }
futures = "0.3.31"
log = "0.4.22"
env_logger = "0.11.6"
num-traits = "0.2.19"
